Remove CMS GC settings [3145]
Concurrent Mark Sweep collector is gone as of Java 14.